--- a/index.html
+++ b/index.html
@@ -1,45 +1,17 @@
 ---
 layout: layout
-title: Test home page
+title: Site of Holding
+description: all sections in the site
 ---
 
+<h2>Things to hold</h2>
 
-        <h2>And now for the content...</h2>
-
-        <div class="large-4 columns">
-            <ul>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-            </ul>
-        </div>
-
-        <div class="large-4 columns">
-            <ul>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-            </ul>
-        </div>
-
-        <div class="large-4 columns">
-            <ul>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-                <li><a href="#">link</li>
-            </ul>
-        </div>
-        
-
+<div class="large-12 columns">
+  <ul>
+    <li><a href="/starwars">Star Wars</li>
+    <li><a href="/l5r">Legend of the Five Rings</li>
+    <li><a href="/dandd">Dungeons and Dragons</li>
+    <li><a href="/stargate">Stargate</li>
+    <li><a href="/spycraft">Spycraft</li>
+  </ul>
+</div>
