Fixed broken markup

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ description: all sections in the site
 
 <div class="large-12 columns">
   <ul>
-    <li><a href="/starwars">Star Wars</li>
-    <li><a href="/l5r">Legend of the Five Rings</li>
-    <li><a href="/dandd">Dungeons and Dragons</li>
-    <li><a href="/stargate">Stargate</li>
-    <li><a href="/spycraft">Spycraft</li>
+    <li><a href="/starwars">Star Wars</a></li>
+    <li><a href="/l5r">Legend of the Five Rings</a></li>
+    <li><a href="/dandd">Dungeons and Dragons</a></li>
+    <li><a href="/stargate">Stargate</a></li>
+    <li><a href="/spycraft">Spycraft</a></li>
   </ul>
 </div>
